# strategka

./: .gitignore  Cargo.toml  shell.nix
strategka-core/: Cargo.toml
strategka-core/src/: lib.rs  world.rs
strategka-core/src/replay/: decoder.rs  encoder.rs  error.rs  mod.rs
strategka-render/: .gitignore  Cargo.toml  circles.replay  replay_circles  run_circles
strategka-render/examples/: circles.rs  triangle.rs
strategka-render/src/: lib.rs
