[package]
name = "strategka-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde = "1.0.163"
thiserror = "1.0.40"
ciborium = "0.2.1"
log = "0.4.18"

[dev-dependencies]
serde = {version = "*", features = [ "derive" ] }
env_logger = "*"
temp-file = "0.1.7"
test-log = "0.2.12"