[package]
name = "strategka-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
thiserror = "1.0.40"
tiny-skia = "0.9.1"
strategka-core = { path = "../strategka-core", version = "0.1.0" }

[dev-dependencies]
rand = "0.8.5"